--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ APP_SECRET=e89c783d8026a2b6d7a3db2b1183ffbe
  DATABASE_URL="mysql://root:root@127.0.0.1:8889/company?serverVersion=5.7"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
